镜像使用调整

--- a/docker/docker-compose-flink.yml
+++ b/docker/docker-compose-flink.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   jobmanager:
-    image: martindai/flink:1.14.3-arm64
+    image: martindai/flink:1.14.3
     container_name: jobmanager
     expose:
       - "6123"
@@ -13,7 +13,7 @@ services:
     networks:
       - net-flink
   taskmanager1:
-    image: martindai/flink:1.14.3-arm64
+    image: martindai/flink:1.14.3
     container_name: taskmanager1
     expose:
       - "6121"
@@ -27,7 +27,7 @@ services:
     networks:
       - net-flink
   taskmanager2:
-    image: martindai/flink:1.14.3-arm64
+    image: martindai/flink:1.14.3
     container_name: taskmanager2
     expose:
       - "6121"
