--- a/docker/docker-compose-flink.yml
+++ b/docker/docker-compose-flink.yml
@@ -10,6 +10,9 @@ services:
     command: jobmanager
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
+    volumes:
+      - ./flink/conf/flink-conf.yaml:/opt/flink/conf/flink-conf.yaml
+      - ./flink/data/:/flink-data/
     networks:
       - net-flink
   taskmanager1:
