升级gradle版本，调整配置

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+# Ignore Mac temp file
+.DS_Store
+
 # Ignore IDE directory
 .idea/
 
 # Ignore Gradle project-specific cache directory
-.gradle
+.gradle/
 
 # Ignore Gradle build output directory
 build/
